# CMakeList.txt : CMake project for Project, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# CMake Project Name
project (project-cmake)

# Add source to this project's executable.
add_executable (project-cmake "Project.cpp" "Project.h")

# TODO: Add tests and install targets if needed.
